--- a/style.css
+++ b/style.css
@@ -1,51 +1,51 @@
-.panel {
-    width: 800px;
-    height: 800px;
-    margin: auto;
-    position: relative;
+/* ::: HOLDER, CARD, FACES */
+.holder {
+  display:     inline-block;
+  width:       64px;
+  height:      64px;
+  perspective: 700px;
+}
+.card, .front, .back{
+  position:   absolute;
+  height:     inherit;
+  width:      inherit;
+  transition: all .7s;
+  transform-style:     preserve-3d;
+  backface-visibility: visible;
 }
 
-.card {
-    width: 100%;
-    height: 100%;
-    -o-transition: all .5s;
-    -ms-transition: all .5s;
-    -moz-transition: all .5s;
-    -webkit-transition: all .5s;
-    transition: all .5s;
-    -webkit-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    backface-visibility: hidden;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-}
+/* ::: FACES */
+.front{background: tomato;}
+.back{background:  slategray;}
 
-.front {
-    z-index: 2;
-}
+/* ::: SETUP FACES */
+.flipH .back{transform: rotateY(-180deg);}
+.flipV .back{transform: rotateX(180deg);}
 
-.back {
-    z-index: 1;
-    -webkit-transform: rotateY(-180deg);
-    -ms-transform: rotateY(-180deg);
-    -moz-transform: rotateY(-180deg);  
-    transform: rotateY(-180deg);  
-}
+/* ::: HOVER EFFECTS (Remove Automated for this to work) */
+.flipH:hover .card{ transform: rotateY(180deg); }
+.flipV:hover .card{ transform: rotateX(-180deg); }
 
-.panel:hover .front {
-    z-index: 1;
-    -webkit-transform: rotateY(180deg);
-    -ms-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    transform: rotateY(180deg);
+/* ::: AUTOMATED EFFECTS */
+.flipH .card{
+  animation: flipH 2s 0s infinite alternate ease-in-out;
 }
-
-.panel:hover .back {
-    z-index: 2;   
-    -webkit-transform: rotateY(0deg);
-    -ms-transform: rotateY(0deg);
-    -moz-transform: rotateY(0deg);
-    transform: rotateY(0deg);
+.flipV .card{
+  animation: flipV 2s 0s infinite alternate ease-in-out;
+}
+@keyframes flipH {
+  0% { transform: rotateY(0deg); }
+  100% { transform: rotateY(-180deg); }
+}
+@-webkit-keyframes flipH {
+  0% { transform: rotateY(0deg); }
+  100% { transform: rotateY(-180deg); }
+}
+@keyframes flipV {
+  0% { transform: rotateX(0deg); }
+  100% { transform: rotateX(-180deg); }
+}
+@-webkit-keyframes flipV {
+  0% { transform: rotateX(0deg); }
+  100% { transform: rotateX(-180deg); }
 }
