--- a/style.css
+++ b/style.css
@@ -28,24 +28,24 @@
 
 .back {
     z-index: 1;
-    -webkit-transform: rotateX(-180deg);
-    -ms-transform: rotateX(-180deg);
-    -moz-transform: rotateX(-180deg);  
-    transform: rotateX(-180deg);  
+    -webkit-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);  
+    transform: rotateY(-180deg);  
 }
 
 .panel:hover .front {
     z-index: 1;
-    -webkit-transform: rotateX(180deg);
-    -ms-transform: rotateX(180deg);
-    -moz-transform: rotateX(180deg);
-    transform: rotateX(180deg);
+    -webkit-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
 .panel:hover .back {
     z-index: 2;   
-    -webkit-transform: rotateX(0deg);
-    -ms-transform: rotateX(0deg);
-    -moz-transform: rotateX(0deg);
-    transform: rotateX(0deg);
+    -webkit-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    transform: rotateY(0deg);
 }
